--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -1,35 +1,6 @@
 ﻿<!DOCTYPE html>
 <html lang="en">
-<style>
-    .topnav {
-        overflow: hidden;
-        background-color: #001f3f; /* Dark Blue */
-    }
-
-        .topnav a {
-            float: left;
-            color: #f2f2f2;
-            text-align: center;
-            padding: 14px 20px;
-            text-decoration: none;
-            font-size: 17px;
-            transition: background-color 0.3s, color 0.3s;
-        }
-
-            .topnav a:hover {
-                background-color: #0074D9; /* Lighter blue on hover */
-                color: white;
-            }
-
-            .topnav a.active {
-                background-color: #0056b3; /* Active tab color */
-                color: white;
-            }
-
-        .topnav + .container {
-            margin-top: 60px; /* Space under navbar */
-        }
-</style>
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
 
 <div class="topnav">
     <a>
@@ -60,6 +31,8 @@
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
     <script src="~/js/site.js" asp-append-version="true"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>
+
     @await RenderSectionAsync("Scripts", required: false)
 </body>
 </html>
