make the Deaddate non nuallabe and make the navbar and updating the UI added buttons on the create option for each page

--- a/Views/Books/Index.cshtml
+++ b/Views/Books/Index.cshtml
@@ -3,11 +3,11 @@
 @{
     ViewData["Title"] = "Index";
 }
-
-<h1>Index</h1>
+<h1 class="page-title">Library Management</h1>
+<p class="page-subtitle">Manage your organization Library</p>
 
 <p>
-    <a asp-action="Create">Create New</a>
+    <a asp-action="Create" class="btn btn-primary">Create New</a>
 </p>
 <table class="table">
     <thead>
