--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -13,8 +13,8 @@
 
     <div class="page-header">
         <div class="container">
-            <h1 class="page-title">Liberary Management</h1>
-            <p class="page-subtitle">Manage your organization's Liberarys</p>
+            <h1 class="page-title">Library Management</h1>
+            <p class="page-subtitle">Manage your organization Liberary</p>
         </div>
     </div>
 
