--- a/Views/Books/Create.cshtml
+++ b/Views/Books/Create.cshtml
@@ -23,7 +23,7 @@
                 <span asp-validation-for="Description" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="TipologyId" class="control-label"></label>
+                <label asp-for="Tipology" class="control-label"></label>
                 <select asp-for="TipologyId" class ="form-control" asp-items="ViewBag.TipologyId"></select>
             </div>
             <div class="form-group">
@@ -32,11 +32,11 @@
                 <span asp-validation-for="ISBN" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="AuthorId" class="control-label"></label>
+                <label asp-for="Authors" class="control-label"></label>
                 <select asp-for="AuthorId" class ="form-control" asp-items="ViewBag.AuthorId"></select>
             </div>
             <div class="form-group">
-                <label asp-for="PubblisherId" class="control-label"></label>
+                <label asp-for="Pubblisher" class="control-label"></label>
                 <select asp-for="PubblisherId" class ="form-control" asp-items="ViewBag.PubblisherId"></select>
             </div>
             <div class="form-group">
