--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -52,10 +52,16 @@ body {
   border-radius: 0.375rem;
   margin: 0 0.25rem;
 }
+.navbar-nav .nav-link:hover {
+    background-color: rgba(255, 255, 255, 0.1);
+    color: var(--white) !important;
+    border-radius: 0.375rem;
+}
+
 
 .navbar-nav .nav-link:hover {
-  background-color: rgba(255, 255, 255, 0.1);
-  color: var(--white) !important;
+    background-color: rgba(255, 255, 255, 0.1);
+    color: var(--white) !important;
 }
 
 /* Button Styles */
