Fixing created data

--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -159,7 +159,7 @@
             <!-- Horizontal Navigation -->
             <nav class="navbar navbar-expand-lg main-navbar">
                 <div class="container-fluid">
-                    <a class="navbar-brand" href="@Url.Action("Index", "Home")">Library Management System</a>
+                    <a class="navbar-brand" href="@Url.Action("Index", "Books")">Library Management System</a>
 
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
                         <span class="navbar-toggler-icon"></span>
@@ -184,7 +184,7 @@
                                     <li><hr class="dropdown-divider"></li>
                                     <li><a class="dropdown-item" href="@Url.Action("Index", "Tipologies")"><i class="fas fa-tags me-2"></i>Tipology</a></li>
                                     <li><hr class="dropdown-divider"></li>
-                                    <li><a class="dropdown-item" href="@Url.Action("Index", "Publishers")"><i class="fas fa-building me-2"></i>Publisher</a></li>
+                                    <li><a class="dropdown-item" href="@Url.Action("Index", "Pubblishers")"><i class="fas fa-building me-2"></i>Pubblisher</a></li>
                                     <li><hr class="dropdown-divider"></li>
                                     <li><a class="dropdown-item" href="@Url.Action("Index", "Books")"><i class="fas fa-book-open me-2"></i>All Books</a></li>
                                 </ul>
