--- a/Views/Pubblishers/Index.cshtml
+++ b/Views/Pubblishers/Index.cshtml
@@ -4,6 +4,12 @@
     ViewData["Title"] = "Index";
 }
 
+<style>
+    td.right-align {
+        text-align: right;
+    }
+</style>
+
 <h1>Pubblisher</h1>
 
 <p>
@@ -24,10 +30,10 @@
             <td>
                 @Html.DisplayFor(modelItem => item.Company)
             </td>
-            <td>
-                <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
+            <td class="right-align">
+                    <a asp-action="Edit" asp-route-id="@item.Id" class="btn btn-primary">Edit</a> 
+                    <a asp-action="Details" asp-route-id="@item.Id" class="btn btn-primary">Details</a> 
+                    <a asp-action="Delete" asp-route-id="@item.Id" class="btn btn-primary">Delete</a>
             </td>
         </tr>
 }
