--- a/Views/Books/Edit.cshtml
+++ b/Views/Books/Edit.cshtml
@@ -3,12 +3,13 @@
 @{
     ViewData["Title"] = "Edit";
 }
+@{
+    Layout = "~/Views/Shared/_DataLayout.cshtml";
+}
+<h1 class="d-flex justify-content-center vh-1">Edit Book</h1>
 
-<h1>Edit</h1>
-
-<h4>Book</h4>
 <hr />
-<div class="row">
+<div class="d-flex justify-content-center align-items-center vh-80">
     <div class="col-md-4">
         <form asp-action="Edit">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
@@ -52,12 +53,13 @@
                 <input type="submit" value="Save" class="btn btn-primary" />
             </div>
         </form>
+        <div class="text-center mt-3">
+            <a asp-action="Index">Back to List</a>
+        </div>
     </div>
 </div>
 
-<div>
-    <a asp-action="Index">Back to List</a>
-</div>
+
 
 @section Scripts {
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
