--- a/Views/Tipologies/Index.cshtml
+++ b/Views/Tipologies/Index.cshtml
@@ -4,6 +4,12 @@
     ViewData["Title"] = "Index";
 }
 
+<style>
+    td.right-align {
+        text-align: right;
+    }
+</style>
+
 <h1>Tipologies</h1>
 
 <p>
@@ -24,12 +30,14 @@
             <td>
                 @Html.DisplayFor(modelItem => item.Description)
             </td>
-            <td>
-                <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
+                <td class="right-align">
+                    <a asp-action="Edit" asp-route-id="@item.Id" class="btn btn-primary" >Edit</a>
+                    <a asp-action="Details" asp-route-id="@item.Id" class="btn btn-primary" >Details</a>
+                    <a asp-action="Delete" asp-route-id="@item.Id" class="btn btn-primary" >Delete</a>
             </td>
         </tr>
 }
     </tbody>
 </table>
+
+
