--- a/Views/Shared/_DataLayout.cshtml
+++ b/Views/Shared/_DataLayout.cshtml
@@ -214,7 +214,7 @@
 
     <!-- Main Content -->
     <div class="container">
-        <main role="main" class="main-content p-4 w-75">
+        <main role="main" class="main-content p-4 w-50 mx-auto">
             @RenderBody()
         </main>
     </div>
