added borrow view

--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -194,7 +194,7 @@
 
                             <!-- About Us -->
                             <li class="nav-item">
-                                <a class="nav-link" href="@Url.Action("About", "Home")">
+                                <a class="nav-link" href="@Url.Action("Index", "Borrows")">
                                     <i class="fas fa-info-circle me-2"></i>About Us
                                 </a>
                             </li>
