--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -192,10 +192,10 @@
                             <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
 
 
-                            <!-- About Us -->
+                            <!-- Borrows -->
                             <li class="nav-item">
                                 <a class="nav-link" href="@Url.Action("Index", "Borrows")">
-                                    <i class="fas fa-info-circle me-2"></i>About Us
+                                    <i class="fas fa-info-circle me-2"></i>Borrow
                                 </a>
                             </li>
 
