--- a/Views/Borrows/Create.cshtml
+++ b/Views/Borrows/Create.cshtml
@@ -3,43 +3,46 @@
 @{
     ViewData["Title"] = "Create";
 }
+@{
+    Layout = "~/Views/Shared/_DataLayout.cshtml";
+}
 
-<h1>Create</h1>
+<h1 class="d-flex justify-content-center vh-1">Borrow a Book</h1>
 
-<h4>Borrow</h4>
 <hr />
-<div class="row">
+<div class="d-flex justify-content-center align-items-center vh-80">
     <div class="col-md-4">
         <form asp-action="Create">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
-                <label asp-for="ClientId" class="control-label"></label>
+                <label asp-for="ClientId" class="control-label">Client</label>
                 <select asp-for="ClientId" class ="form-control" asp-items="ViewBag.ClientId"></select>
             </div>
             <div class="form-group">
-                <label asp-for="BookId" class="control-label"></label>
+                <label asp-for="BookId" class="control-label">Book</label>
                 <select asp-for="BookId" class ="form-control" asp-items="ViewBag.BookId"></select>
             </div>
             <div class="form-group">
-                <label asp-for="BorrowDate" class="control-label"></label>
+                <label asp-for="BorrowDate" class="control-label">Borrow Date</label>
                 <input asp-for="BorrowDate" class="form-control" />
                 <span asp-validation-for="BorrowDate" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="BorrowDays" class="control-label"></label>
+                <label asp-for="BorrowDays" class="control-label">Borrow Days</label>
                 <input asp-for="BorrowDays" class="form-control" />
                 <span asp-validation-for="BorrowDays" class="text-danger"></span>
             </div>
-            <div class="form-group">
+            <div class="form-group text-center mt-3">
                 <input type="submit" value="Create" class="btn btn-primary" />
             </div>
         </form>
+        <div class="text-center mt-3">
+            <a asp-action="Index" class="btn btn-primary">Back to List</a>
+        </div>
     </div>
 </div>
 
-<div>
-    <a asp-action="Index">Back to List</a>
-</div>
+
 
 @section Scripts {
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
