--- a/Views/Authors/Create.cshtml
+++ b/Views/Authors/Create.cshtml
@@ -35,7 +35,7 @@
                 <small class="form-text text-muted">Leave empty if still alive or current.</small>  
                 <span asp-validation-for="DeadDate" class="text-danger"></span>
             </div>
-            <div class="form-group">
+            <div class="form-group text-center mt-3">
                 <input type="submit" value="Create" class="btn btn-primary" />
             </div>
         </form>
