--- a/Views/Books/Index.cshtml
+++ b/Views/Books/Index.cshtml
@@ -67,7 +67,7 @@
             <td>
                 @Html.DisplayFor(modelItem => item.PubblicDate)
             </td>
-            <td>
+            <td class="right-align">
                 <a asp-action="Edit" asp-route-id="@item.Id" class="btn btn-primary">Edit</a> 
                 <a asp-action="Details" asp-route-id="@item.Id" class="btn btn-primary">Details</a>
                 <a asp-action="Delete" asp-route-id="@item.Id" class="btn btn-primary">Delete</a>
