--- a/Views/Authors/Edit.cshtml
+++ b/Views/Authors/Edit.cshtml
@@ -35,12 +35,12 @@
                 <input asp-for="DeadDate" class="form-control" />
                 <span asp-validation-for="DeadDate" class="text-danger"></span>
             </div>
-            <div class="form-group">
+            <div class="form-group text-center mt-3">
                 <input type="submit" value="Save" class="btn btn-primary" />
             </div>
         </form>
         <div class="text-center mt-3">
-            <a asp-action="Index">Back to List</a>
+            <a asp-action="Index" class="btn btn-primary">Back to List</a>
         </div>
     </div>
 </div>
