--- a/Views/Authors/Index.cshtml
+++ b/Views/Authors/Index.cshtml
@@ -48,7 +48,7 @@
             <td>
                 @Html.DisplayFor(modelItem => item.DeadDate)
             </td>
-            <td>
+            <td class="right-align">
                 <a asp-action="Edit" asp-route-id="@item.Id" class="btn btn-primary">Edit</a>
                 <a asp-action="Details" asp-route-id="@item.Id" class="btn btn-primary">Details</a>
                 <a asp-action="Delete" asp-route-id="@item.Id" class="btn btn-primary">Delete</a>
