--- a/Views/Pubblishers/Index.cshtml
+++ b/Views/Pubblishers/Index.cshtml
@@ -40,7 +40,11 @@
     </tbody>
 </table> *@
 
-
+<style>
+    td.right-align {
+        text-align: right;
+    }
+</style>
 
 @model IEnumerable<library_system.Models.Pubblisher>
 
@@ -84,10 +88,10 @@
             {
                 <tr>
                     <td>@item.Company</td>
-                    <td>
-                        <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
-                        <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
-                        <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
+                    <td class ="right-align">
+                        <a asp-action="Edit" asp-route-id="@item.Id" class="btn btn-primary">Edit</a> 
+                        <a asp-action="Details" asp-route-id="@item.Id" class="btn btn-primary">Details</a> 
+                        <a asp-action="Delete" asp-route-id="@item.Id" class="btn btn-primary">Delete</a>
                     </td>
                 </tr>
             }
