--- a/Views/Clients/SignUp.cshtml
+++ b/Views/Clients/SignUp.cshtml
@@ -219,6 +219,11 @@
                 @Html.PasswordFor(A => A.Password, new { @class = "form-control", placeholder = "Create a password", required = "required" })
                 @* @Html.ValIdationMessageFor(A => A.Password, "", new { @class = "text-danger" }) *@
             </div>
+            <div class="form-group">
+                <label asp-for="ConfirmPassword"></label>
+                <input asp-for="ConfirmPassword" class="form-control" type="password" />
+                <span asp-validation-for="ConfirmPassword" class="text-danger"></span>
+            </div>
 
             <button type="submit" class="btn-signup">
                 <i class="fas fa-user-plus me-2"></i>Create Account
